...
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:layout_marginLeft="-10dp"
            android:contentDescription="Back"
...
                android:text="Title"
                android:textColor="#212121"
                android:textSize="15sp" />

            <!-- Description -->
            <EditText
                android:id="@+id/etEventTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/searchbar_background"
                android:fontFamily="@font/poppins_regular"
                android:hint="e.g. Campus Blood Drive"
                android:layout_marginBottom="25dp"
...
                android:text="Description"
                android:fontFamily="@font/poppins_regular"
                android:textColor="#212121"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etEventDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="25dp"
                android:gravity="top"
                android:background="@drawable/searchbar_background"
                android:fontFamily="@font/poppins_regular"
...
                android:fontFamily="@font/poppins_regular"
                android:text="Registration period"
                android:textColor="#212121"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etRegistrationPeriod"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/searchbar_background"
                android:hint="YYYY/MM/DD - YYYY/MM/DD"
...
                android:layout_marginBottom="4dp"
                android:text="Entrant limit"
                android:textColor="#212121"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etEntrantLimit"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/searchbar_background"
                android:hint="Maximum participants"
...
                android:text="Event date and time"
                android:textColor="#212121"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/etEventDateTime"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:layout_height="50dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/searchbar_background"
                android:hint="Time of the event"
...
                android:text="Event Location"
                android:textColor="#212121"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/etEventLocation"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/searchbar_background"
                android:hint="Location of the event"
                android:inputType="text"
...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
                <com.google.android.material.chip.Chip
                    android:theme="@style/Theme.App.Chip"
                    android:background="@drawable/tag_selector"
                    android:text="Contest"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    >
                </com.google.android.material.chip.Chip>
                <com.google.android.material.chip.Chip
...


    </ScrollView>

    <!-- Create -->
    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:textAllCaps="false"
        style="@style/GreenButton"
        android:elevation="2dp"
...
