...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

      <!-- TEXT FIELDS -->
      <EditText
          android:id="@+id/nameEditText"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:background="@drawable/searchbar_background"
          android:fontFamily="@font/poppins_bold"
          android:hint="Full name"
          android:textSize="16sp"
...
          android:textColorHint="#66000000"
          android:paddingStart="16dp"
          android:paddingEnd="16dp"
          android:layout_marginTop="8dp" />

      <EditText
          android:id="@+id/usernameEditText"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:background="@drawable/searchbar_background"
          android:fontFamily="@font/poppins_bold"
          android:hint="Username"
          android:textSize="16sp"
...
          android:textColorHint="#66000000"
          android:paddingStart="16dp"
          android:paddingEnd="16dp"
          android:layout_marginTop="8dp" />

      <EditText
          android:id="@+id/emailEditText"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:background="@drawable/searchbar_background"
          android:fontFamily="@font/poppins_bold"
          android:hint="Email"
          android:inputType="textEmailAddress"
...
          android:paddingEnd="16dp"
          android:layout_marginTop="8dp" />



      <EditText
          android:id="@+id/passwordEditText"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:background="@drawable/searchbar_background"
          android:fontFamily="@font/poppins_bold"
          android:hint="Password"
          android:inputType="textPassword"
...
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="8dp"
          android:padding="4dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/organizerButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/inactive_button_border"
            android:fontFamily="@font/poppins_bold"
            android:text="Organizer"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/entrantButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/inactive_button_border"
...
          android:text=""
          android:textColor="#FF5555"
          android:layout_marginTop="8dp" />

      <!-- CREATE ACCOUNT BUTTON -->
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/createAccountButton"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginTop="16dp"
          android:background="@drawable/button_primary_green"
          android:fontFamily="@font/poppins_bold"
          android:text="Create Account"
...
