<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="@android:color/white"
    android:scrollbars="none">
...
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/profile_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textSize="25sp"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingLeft="10dp"
...
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_atsymbol"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingLeft="10dp"
...
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_profile"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingLeft="10dp"
...
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingLeft="10dp"
...
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp">

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:text="Log Out"
                android:textAllCaps="false"
...
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/criteria_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:text="Criteria and Guidlines"
                android:textAllCaps="false"
...
