...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:padding="24dp"
        android:scrollbars="none"
...
                    android:textAllCaps="false"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    style="@style/PurpleButton" />

                <Button
                    android:id="@+id/sendNotificationsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="Send Notifications"
                    android:textSize="18sp"
                    android:textStyle="bold"
...
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:visibility="gone">

                    <!-- Join/Leave Waitlist Button -->
                    <Button
                        android:id="@+id/eventViewJoinWaitListButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Join Waiting List"
                        android:textAllCaps="false"
                        style="@style/GreenButton" />

...
        </LinearLayout>

    </ScrollView>

    <!-- Back Button (Top left, floating) -->
    <FrameLayout
        android:id="@+id/organizer_event_back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:layout_marginTop="5dp"
...
